# channels

./: meson.build  meson_options.txt
channels/: channels.hpp  concepts.hpp  pipelines.hpp  tags.hpp  traits.hpp
tests/channels_concepts/: main.cpp
tests/multithreads/: main.cpp
tests/new_syntax/: main.cpp
tests/test1/: main.cpp
tests/traits/: main.cpp
